--- a/src/client/components/StoryCard.module.css
+++ b/src/client/components/StoryCard.module.css
@@ -18,10 +18,17 @@
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 6px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .description {
   color: #a3a3a3;
   font-size: 14px;
   line-height: 1.6;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
